force-app/main/default/objects/Room__c/fields/Occupancy__c.field-meta.xml
<CustomField>
    <fullName>Occupancy__c</fullName>
    <description>Singlet - Single Bed
Doublet - Double Bed
Triplet - Triple Bed</description>
    <label>Occupancy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Singlet</fullName>
            </value>
            <value>
                <fullName>Doublet</fullName>
            </value>
            <value>
                <fullName>Triplet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>