force-app/main/default/objects/Room__c/fields/Room_Number__c.field-meta.xml
<CustomField>
    <fullName>Room_Number__c</fullName>
    <displayFormat>AF-{000}</displayFormat>
    <label>Room Number</label>
    <type>AutoNumber</type>
</CustomField>